crates/ruff/src/rules/flake8_pyi/snapshots/ruff__rules__flake8_pyi__tests__PYI050_PYI050.py.snap
---
source: crates/ruff/src/rules/flake8_pyi/mod.rs
---
PYI050.py:13:24: PYI050 Prefer `typing.Never` over `NoReturn` for argument annotations
   |
13 | def foo_no_return(arg: NoReturn):
   |                        ^^^^^^^^ PYI050
14 |     ...
   |

PYI050.py:23:44: PYI050 Prefer `typing.Never` over `NoReturn` for argument annotations
   |
23 | def foo_no_return_kwarg(arg: int, *, arg2: NoReturn):
   |                                            ^^^^^^^^ PYI050
24 |     ...
   |

PYI050.py:27:47: PYI050 Prefer `typing.Never` over `NoReturn` for argument annotations
   |
27 | def foo_no_return_pos_only(arg: int, /, arg2: NoReturn):
   |                                               ^^^^^^^^ PYI050
28 |     ...
   |


