crates/ruff/src/rules/flake8_pyi/snapshots/ruff__rules__flake8_pyi__tests__PYI050_PYI050.pyi.snap
---
source: crates/ruff/src/rules/flake8_pyi/mod.rs
---
PYI050.pyi:6:24: PYI050 Prefer `typing.Never` over `NoReturn` for argument annotations
  |
4 | def foo(arg): ...
5 | def foo_int(arg: int): ...
6 | def foo_no_return(arg: NoReturn): ...  # Error: PYI050
  |                        ^^^^^^^^ PYI050
7 | def foo_no_return_typing_extensions(
8 |     arg: typing_extensions.NoReturn,
  |

PYI050.pyi:10:44: PYI050 Prefer `typing.Never` over `NoReturn` for argument annotations
   |
 8 |     arg: typing_extensions.NoReturn,
 9 | ): ...  # Error: PYI050
10 | def foo_no_return_kwarg(arg: int, *, arg2: NoReturn): ...  # Error: PYI050
   |                                            ^^^^^^^^ PYI050
11 | def foo_no_return_pos_only(arg: int, /, arg2: NoReturn): ...  # Error: PYI050
12 | def foo_never(arg: Never): ...
   |

PYI050.pyi:11:47: PYI050 Prefer `typing.Never` over `NoReturn` for argument annotations
   |
 9 | ): ...  # Error: PYI050
10 | def foo_no_return_kwarg(arg: int, *, arg2: NoReturn): ...  # Error: PYI050
11 | def foo_no_return_pos_only(arg: int, /, arg2: NoReturn): ...  # Error: PYI050
   |                                               ^^^^^^^^ PYI050
12 | def foo_never(arg: Never): ...
   |


