crates/ruff/src/rules/flake8_pyi/snapshots/ruff__rules__flake8_pyi__tests__PYI052_PYI052.pyi.snap
---
source: crates/ruff/src/rules/flake8_pyi/mod.rs
---
PYI052.pyi:14:10: PYI052 Need type annotation for `field5`
   |
14 | field43: int = -0xFFFFFFFF
15 | field44: int = -1234567890
16 | field5 = 0  # type: int  # Y033 Do not use type comments in stubs (e.g. use "x: int" instead of "x = ... # type: int")  # Y052 Need type annotation for "field5"
   |          ^ PYI052
17 | field6 = 0  # Y052 Need type annotation for "field6"
18 | field7 = b""  # Y052 Need type annotation for "field7"
   |

PYI052.pyi:15:10: PYI052 Need type annotation for `field6`
   |
15 | field44: int = -1234567890
16 | field5 = 0  # type: int  # Y033 Do not use type comments in stubs (e.g. use "x: int" instead of "x = ... # type: int")  # Y052 Need type annotation for "field5"
17 | field6 = 0  # Y052 Need type annotation for "field6"
   |          ^ PYI052
18 | field7 = b""  # Y052 Need type annotation for "field7"
19 | field71 = "foo"  # Y052 Need type annotation for "field71"
   |

PYI052.pyi:16:10: PYI052 Need type annotation for `field7`
   |
16 | field5 = 0  # type: int  # Y033 Do not use type comments in stubs (e.g. use "x: int" instead of "x = ... # type: int")  # Y052 Need type annotation for "field5"
17 | field6 = 0  # Y052 Need type annotation for "field6"
18 | field7 = b""  # Y052 Need type annotation for "field7"
   |          ^^^ PYI052
19 | field71 = "foo"  # Y052 Need type annotation for "field71"
20 | field72: str = "foo"
   |

PYI052.pyi:17:11: PYI052 Need type annotation for `field71`
   |
17 | field6 = 0  # Y052 Need type annotation for "field6"
18 | field7 = b""  # Y052 Need type annotation for "field7"
19 | field71 = "foo"  # Y052 Need type annotation for "field71"
   |           ^^^^^ PYI052
20 | field72: str = "foo"
21 | field8 = False  # Y052 Need type annotation for "field8"
   |

PYI052.pyi:19:10: PYI052 Need type annotation for `field8`
   |
19 | field71 = "foo"  # Y052 Need type annotation for "field71"
20 | field72: str = "foo"
21 | field8 = False  # Y052 Need type annotation for "field8"
   |          ^^^^^ PYI052
22 | field81 = -1  # Y052 Need type annotation for "field81"
23 | field82: float = -98.43
   |

PYI052.pyi:20:11: PYI052 Need type annotation for `field81`
   |
20 | field72: str = "foo"
21 | field8 = False  # Y052 Need type annotation for "field8"
22 | field81 = -1  # Y052 Need type annotation for "field81"
   |           ^^ PYI052
23 | field82: float = -98.43
24 | field83 = -42j  # Y052 Need type annotation for "field83"
   |

PYI052.pyi:22:11: PYI052 Need type annotation for `field83`
   |
22 | field81 = -1  # Y052 Need type annotation for "field81"
23 | field82: float = -98.43
24 | field83 = -42j  # Y052 Need type annotation for "field83"
   |           ^^^^ PYI052
25 | field84 = 5 + 42j  # Y052 Need type annotation for "field84"
26 | field85 = -5 - 42j  # Y052 Need type annotation for "field85"
   |

PYI052.pyi:23:11: PYI052 Need type annotation for `field84`
   |
23 | field82: float = -98.43
24 | field83 = -42j  # Y052 Need type annotation for "field83"
25 | field84 = 5 + 42j  # Y052 Need type annotation for "field84"
   |           ^^^^^^^ PYI052
26 | field85 = -5 - 42j  # Y052 Need type annotation for "field85"
27 | field9 = None  # Y026 Use typing_extensions.TypeAlias for type aliases, e.g. "field9: TypeAlias = None"
   |

PYI052.pyi:24:11: PYI052 Need type annotation for `field85`
   |
24 | field83 = -42j  # Y052 Need type annotation for "field83"
25 | field84 = 5 + 42j  # Y052 Need type annotation for "field84"
26 | field85 = -5 - 42j  # Y052 Need type annotation for "field85"
   |           ^^^^^^^^ PYI052
27 | field9 = None  # Y026 Use typing_extensions.TypeAlias for type aliases, e.g. "field9: TypeAlias = None"
28 | Field95: TypeAlias = None
   |

PYI052.pyi:33:11: PYI052 Need type annotation for `field19`
   |
33 | Field100 = TypeVarTuple('Field100')
34 | Field101 = ParamSpec('Field101')
35 | field19 = [1, 2, 3]  # Y052 Need type annotation for "field19"
   |           ^^^^^^^^^ PYI052
36 | field191: list[int] = [1, 2, 3]
37 | field20 = (1, 2, 3)  # Y052 Need type annotation for "field20"
   |

PYI052.pyi:35:11: PYI052 Need type annotation for `field20`
   |
35 | field19 = [1, 2, 3]  # Y052 Need type annotation for "field19"
36 | field191: list[int] = [1, 2, 3]
37 | field20 = (1, 2, 3)  # Y052 Need type annotation for "field20"
   |           ^^^^^^^^^ PYI052
38 | field201: tuple[int, ...] = (1, 2, 3)
39 | field21 = {1, 2, 3}  # Y052 Need type annotation for "field21"
   |

PYI052.pyi:37:11: PYI052 Need type annotation for `field21`
   |
37 | field20 = (1, 2, 3)  # Y052 Need type annotation for "field20"
38 | field201: tuple[int, ...] = (1, 2, 3)
39 | field21 = {1, 2, 3}  # Y052 Need type annotation for "field21"
   |           ^^^^^^^^^ PYI052
40 | field211: set[int] = {1, 2, 3}
41 | field212 = {"foo": "bar"}  # Y052 Need type annotation for "field212"
   |

PYI052.pyi:39:12: PYI052 Need type annotation for `field212`
   |
39 | field21 = {1, 2, 3}  # Y052 Need type annotation for "field21"
40 | field211: set[int] = {1, 2, 3}
41 | field212 = {"foo": "bar"}  # Y052 Need type annotation for "field212"
   |            ^^^^^^^^^^^^^^ PYI052
42 | field213: dict[str, str] = {"foo": "bar"}
43 | field22: Final = {"foo": 5}
   |


