crates/ruff/src/rules/flake8_pyi/snapshots/ruff__rules__flake8_pyi__tests__PYI054_PYI054.pyi.snap
---
source: crates/ruff/src/rules/flake8_pyi/mod.rs
---
PYI054.pyi:2:16: PYI054 Numeric literals with a string representation longer than ten characters are not permitted
  |
2 | field01: int = 0xFFFFFFFF
3 | field02: int = 0xFFFFFFFFF  # Error: PYI054
  |                ^^^^^^^^^^^ PYI054
4 | field03: int = -0xFFFFFFFF
5 | field04: int = -0xFFFFFFFFF  # Error: PYI054
  |

PYI054.pyi:4:17: PYI054 Numeric literals with a string representation longer than ten characters are not permitted
  |
4 | field02: int = 0xFFFFFFFFF  # Error: PYI054
5 | field03: int = -0xFFFFFFFF
6 | field04: int = -0xFFFFFFFFF  # Error: PYI054
  |                 ^^^^^^^^^^^ PYI054
7 | 
8 | field05: int = 1234567890
  |

PYI054.pyi:8:16: PYI054 Numeric literals with a string representation longer than ten characters are not permitted
   |
 8 | field05: int = 1234567890
 9 | field06: int = 12_456_890
10 | field07: int = 12345678901  # Error: PYI054
   |                ^^^^^^^^^^^ PYI054
11 | field08: int = -1234567801
12 | field09: int = -234_567_890  # Error: PYI054
   |

PYI054.pyi:10:17: PYI054 Numeric literals with a string representation longer than ten characters are not permitted
   |
10 | field07: int = 12345678901  # Error: PYI054
11 | field08: int = -1234567801
12 | field09: int = -234_567_890  # Error: PYI054
   |                 ^^^^^^^^^^^ PYI054
13 | 
14 | field10: float = 123.456789
   |

PYI054.pyi:13:18: PYI054 Numeric literals with a string representation longer than ten characters are not permitted
   |
13 | field10: float = 123.456789
14 | field11: float = 123.4567890  # Error: PYI054
   |                  ^^^^^^^^^^^ PYI054
15 | field12: float = -123.456789
16 | field13: float = -123.567_890  # Error: PYI054
   |

PYI054.pyi:15:19: PYI054 Numeric literals with a string representation longer than ten characters are not permitted
   |
15 | field11: float = 123.4567890  # Error: PYI054
16 | field12: float = -123.456789
17 | field13: float = -123.567_890  # Error: PYI054
   |                   ^^^^^^^^^^^ PYI054
18 | 
19 | field14: complex = 1e1234567j
   |

PYI054.pyi:18:20: PYI054 Numeric literals with a string representation longer than ten characters are not permitted
   |
18 | field14: complex = 1e1234567j
19 | field15: complex = 1e12345678j  # Error: PYI054
   |                    ^^^^^^^^^^^ PYI054
20 | field16: complex = -1e1234567j
21 | field17: complex = 1e123456789j  # Error: PYI054
   |

PYI054.pyi:20:20: PYI054 Numeric literals with a string representation longer than ten characters are not permitted
   |
20 | field15: complex = 1e12345678j  # Error: PYI054
21 | field16: complex = -1e1234567j
22 | field17: complex = 1e123456789j  # Error: PYI054
   |                    ^^^^^^^^^^^^ PYI054
   |


