crates/ruff/src/rules/flake8_pyi/snapshots/ruff__rules__flake8_pyi__tests__Y001_Y001.pyi.snap
---
source: crates/ruff/src/rules/flake8_pyi/mod.rs
expression: diagnostics
---
- kind:
    PrefixPrivateTypes:
      kind: TypeVar
  location:
    row: 3
    column: 4
  end_location:
    row: 3
    column: 16
  fix: ~
  parent: ~
- kind:
    PrefixPrivateTypes:
      kind: TypeVarTuple
  location:
    row: 5
    column: 9
  end_location:
    row: 5
    column: 31
  fix: ~
  parent: ~
- kind:
    PrefixPrivateTypes:
      kind: ParamSpec
  location:
    row: 7
    column: 4
  end_location:
    row: 7
    column: 18
  fix: ~
  parent: ~

